--- a/docs/package.json
+++ b/docs/package.json
@@ -19,7 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "siwe": "^1.1.6",
-    "wagmi": "workspace:*",
+    "plg-wagmi": "workspace:*",
     "viem": "^1.0.0"
   },
   "devDependencies": {
