--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@wagmi/cli",
+  "name": "@plg-wagmi/cli",
   "description": "Manage and generate code from Ethereum ABIs",
   "license": "MIT",
   "version": "1.3.0",
@@ -51,23 +51,21 @@
     "/dist"
   ],
   "peerDependencies": {
-    "@wagmi/core": ">=1.0.0",
-    "typescript": ">=5.0.4",
-    "wagmi": ">=1.0.0"
+    "typescript": ">=5.0.4"
   },
   "peerDependenciesMeta": {
-    "@wagmi/core": {
+    "@plg-wagmi/core": {
       "optional": true
     },
     "typescript": {
       "optional": true
     },
-    "wagmi": {
+    "plg-wagmi": {
       "optional": true
     }
   },
   "dependencies": {
-    "@wagmi/chains": "workspace:*",
+    "@plg-wagmi/chains": "workspace:*",
     "abitype": "0.8.7",
     "abort-controller": "^3.0.0",
     "bundle-require": "^3.1.2",
