--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@wagmi/core",
+  "name": "@plg-wagmi/core",
   "description": "Vanilla JS library for Ethereum",
   "license": "MIT",
   "version": "1.3.4",
@@ -120,8 +120,8 @@
     }
   },
   "dependencies": {
-    "@wagmi/chains": "workspace:*",
-    "@wagmi/connectors": "workspace:*",
+    "@plg-wagmi/chains": "workspace:*",
+    "@plg-wagmi/connectors": "workspace:*",
     "abitype": "0.8.7",
     "eventemitter3": "^4.0.7",
     "zustand": "^4.3.1"
